--- a/src/components/hero section/Herosection.css
+++ b/src/components/hero section/Herosection.css
@@ -7,12 +7,13 @@
 }
 
 .hero-section{
-    font-family: "Inter", sans-serif;
-    /* font-family: 'FoundersGrotesk' ; */
+    margin-top: 4.4rem;
+    font-size: 170px;
+    line-height: 135px;
 }
 
 .hero-section h1{
-    letter-spacing: -7px;
+    letter-spacing: 1px;
 }
 .hero-btn, .hero-btn-i {
     border: 1px solid white;
