--- a/src/components/hero section/Herosection.css
+++ b/src/components/hero section/Herosection.css
@@ -7,6 +7,7 @@
 }
 
 .hero-section{
+    font-family: 'grotesk', 'Roboto', 'Poppins';
     margin-top: 4.4rem;
     font-size: 170px;
     line-height: 135px;
