--- a/src/components/hero section/Herosection.css
+++ b/src/components/hero section/Herosection.css
@@ -31,3 +31,23 @@
     color: #212121; 
     background-color: #f1f1f1;  
 }
+
+.hero-span{
+    background-color: #ef4444;
+    height: 102px;
+    position: relative;
+    top: -15px;
+    width: 148px;
+    left: 13px;
+    margin-right: 22px;
+    border-radius: 10px;
+    display: inline-block;          
+    position: relative;     
+}
+  
+.hero-span img {
+    width: 100%;           
+    height: 100%;           
+    object-fit: cover;      
+    object-position: center; 
+  }
