--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,12 @@ body {
     .footer-last-box{
         font-size: 9px;
     }
+    .dropdown-container{
+        position: absolute;
+        z-index: 99999;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 @media screen and (max-width: 1031px) {
@@ -370,6 +376,13 @@ body {
     }
     .copyright-btn{
         display: none;
+    }
+    .fa-bars{
+        right: 30px;
+    }
+    .fa-xmark{
+        position: absolute;
+        right: 30px;
     }
 }
 @media screen and (max-width: 472px) {
