--- a/src/App.css
+++ b/src/App.css
@@ -101,6 +101,9 @@ body {
         width: 100%;
         height: 100%;
     }
+    .bumper-container{
+        height: 500px;
+    }
 }
 
 @media screen and (max-width: 1031px) {
@@ -188,6 +191,12 @@ body {
     .marquee-box{
         height: 40vh;
     }
+    .bumper-container{
+        height: 400px;
+    }
+    .bumper-btn{
+        display: none;
+    }
 }
 @media screen and (max-width: 770px) {
     .footer-title{
@@ -249,6 +258,12 @@ body {
 @media screen and (max-width: 717px) {
     .projects-btn{
         font-size: 8px;
+    }
+    .bumper-image{
+        width: 70px;
+    }
+    .copyright-btn{
+        display: none;
     }
 }
 
@@ -383,6 +398,12 @@ body {
     .fa-xmark{
         position: absolute;
         right: 40px;
+    }
+    .bumper-container{
+        height: 350px;
+    }
+    .bumper-image{
+        width: 50px;
     }
 }
 @media screen and (max-width: 472px) {
